--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,8 @@
                 <li><a href="#">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" 
+                    role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Saving Data</a></li>
                         <li><a href="#">Fetching Data</a></li>
