--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -19,7 +19,7 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" >
-                <li><a href="#">To shopping</a></li>
+                <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To shopping</a></li>
                 <li><a href="#">Add Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -33,6 +33,10 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingédients
+       <ul class="list-group">
+           <li class="list-group-item" *ngFor= "let ingredient of recipe.ingredients">
+                {{ingredient.name}} - {{ingredient.amount}}
+           </li>
+       </ul>
     </div>
 </div>
